🔨refactor: Cookie, OAuthSuccessHandler 코드 간소화 및 session 정책 IF_REQUIRED로 변경